--- a/flow-lab/build.gradle
+++ b/flow-lab/build.gradle
@@ -19,7 +19,7 @@ dependencies {
     implementation "org.jetbrains.kotlin:kotlin-stdlib"
     implementation 'org.jetbrains.kotlinx:kotlinx-coroutines-core:1.4.3'
     testImplementation "org.jetbrains.kotlinx:kotlinx-coroutines-test:1.3.2"
-    testImplementation 'org.junit.jupiter:junit-jupiter-com.continuedlearning.flow.api:5.6.0'
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.6.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine'
 }
 
